-Allow a single player to reconnect their controls at the menu screen. (@ds-sloth)
-In Magic Hand mode, cursor now snaps to current layer's grid, instead of global grid. (@ds-sloth)
-Fixed crash that could occur if player warped with >2P cheat active. (@ds-sloth)
-Correctly render large level graphics at the edge of the screen. (@Wohlstand, @ds-sloth)

Changelog for 1.3.6
-Added an ability to toggle drawing of the HUD and other on-screen meta data using F1 key (@Wohlstand)
-Added an ability to type cheats on touchscreen using special new cheats key (@Wohlstand, @ds-sloth)
-Added native support for LunaDLL Autocode script language (@Wohlstand)
-Added deaths counter feature (keeps counting of deaths per game save) (@Wohlstand)
-Reworked the controllers support (@ds-sloth)
-Touchscreen support for non-Android platforms (@ds-sloth)
-Added ability to save multiple keyboard profiles (@ds-sloth)
-New multiplayer start screen (@ds-sloth with design input from @0lhi)
-Added controller disconnect recovery screen (@ds-sloth)
-Ground pound by alt run is now a per-controller setting (@ds-sloth)
-Added an ability to add/drop the second player from the pause menu (@ds-sloth)
-Added the support for real-time audio effects such as reverb and SPC echo. They can be configured by sounds.ini for each level section (@Wohlstand)
-Performance improvements for showing, hiding, and moving layers (@ds-sloth)
-Reduced game object memory footprint (@ds-sloth)
-Performance improvements when run on slow filesystems (@ds-sloth)
-Fixed unexpected music got started after the level got entered too quick from the world map (@Wohlstand)
-Fixed the vanilla bug: a Player can stuck in the pipe when enters it being a fairy (@Wohlstand)
-Added an option to enable the fast walking on the world map (@ds-sloth, @Wohlstand)
-Added an ability to customize UI/common assets from the episode and level sides (@Wohlstand)
-Added a blink effect at speedrun timer on level/episode completion (@Wohlstand)