@@ -1433,7 +1433,7 @@ void TouchScreenController::render(int player_no)
 
     for(int key = key_BEGIN; key < key_END; key++)
     {
-        if((m_touchHidden && key != TouchScreenController::key_toggleKeysView) || LoadingInProcess || GamePaused == PauseCode::TextEntry || LevelEditor)
+        if((m_touchHidden && key != TouchScreenController::key_toggleKeysView) || LoadingInProcess || LevelEditor)
             continue;
 
         const auto& k = g_touchKeyMap.touchKeysMap[key];
@@ -1586,7 +1586,7 @@ bool InputMethod_TouchScreen::Update(int player, Controls_t& c, CursorControls_t
 
     c = t->m_controller.m_current_keys;
 
-    TouchScreenController::ExtraKeys_t& te = t->m_controller.m_current_extra_keys;
+    const TouchScreenController::ExtraKeys_t& te = t->m_controller.m_current_extra_keys;
 
     if(GamePaused == PauseCode::None && !GameMenu && !GameOutro && !LevelSelect && t->m_controller.m_runHeld)
     {
@@ -1604,8 +1604,8 @@ bool InputMethod_TouchScreen::Update(int player, Controls_t& c, CursorControls_t
             c.Run |= true;
     }
 
-    // use the touchscreen as a mouse if the buttons are currently hidden, we are in TextEntry mode, or we are in LevelEditor mode
-    bool allowed = t->m_controller.m_touchHidden || GamePaused == PauseCode::TextEntry || LevelEditor;
+    // use the touchscreen as a mouse if the buttons are currently hidden, or we are in LevelEditor mode
+    bool allowed = t->m_controller.m_touchHidden || LevelEditor;
 
     if(allowed && t->m_controller.m_scrollActive)
     {
@@ -1660,6 +1660,18 @@ bool InputMethod_TouchScreen::Update(int player, Controls_t& c, CursorControls_t
 
     if(t->m_controller.m_current_extra_keys.keyCheats && t->m_controller.m_enable_enter_cheats)
         h[Hotkeys::Buttons::EnterCheats] = player;
+
+    // auto show/hide depending on context
+    if(m_wasTextEntry && GamePaused != PauseCode::TextEntry)
+    {
+        t->m_controller.m_touchHidden = false;
+        m_wasTextEntry = false;
+    }
+    else if(!m_wasTextEntry && GamePaused == PauseCode::TextEntry)
+    {
+        t->m_controller.m_touchHidden = true;
+        m_wasTextEntry = true;
+    }
 
     return true;
 }
